--- a/app/allproject.html
+++ b/app/allproject.html
@@ -56,11 +56,11 @@
 					<nav id="my-menu">
 
 						<ul>
-							<li class="active"><a href="index.html">Главная</a></li>
+							<li ><a href="index.html">Главная</a></li>
 							<li><a href="yessite.html">Решение для сайтов</a></li>
 							<li><a href="havesite.html">Сайты</a></li>
 							<li><a href="team.html">Команда</a></li>
-							<li><a href="allproject.html">Партфолио</a></li>
+							<li class="active"> <a href="allproject.html">Партфолио</a></li>
 							<!--<li><a href="#">Quokka.news</a></li>-->
 						</ul>
 
@@ -82,7 +82,7 @@
 											<h1 class="h1" style="color: #666"><span
 												     class="txt-rotate"
 												     data-period="2000"
-												     data-rotate='[ "Quoka" , "Quokka" ]'></span>
+												     data-rotate='[ "Quokka" , "Партфолио" ]'></span>
 											</h1>
 											<strong style="color:#666"><i class="fa fa-star"></i>Убедитес, что мы можем многое<i class="fa fa-star"></i></strong>
 										</div>
@@ -111,7 +111,7 @@
 
 											</div>
 										</div>
-										<a href="#my-content" class="button" style="margin-top: 65px;">Все работы</a>
+										<a href="#contact" class="button" style="margin-top: 65px;">Заказать</a>
 									</div>
 
 								</div>
@@ -125,7 +125,7 @@
 					<nav class="soc">
 						<ul>
 							<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 						</ul>
 					</nav>
@@ -183,7 +183,7 @@
 							<img src="img/project/portfolio/alp.jpg" alt="">
 							<div class="mask">
 								<h2>Сайт для Промальпа</h2>
-								<p>Создание сайта визитки для промышленных альпинистов в Москве</p>
+								<p>Создание корпоративного сайта для промышленных альпинистов в Москве</p>
 								<a href="alpsity.html" class="info">Посмотреть</a>
 							</div>
 						</div>
@@ -214,7 +214,7 @@
 							<img src="img/project/portfolio/kanc.jpg" alt="">
 							<div class="mask1">
 								<h2> Интернет-магазин Канцелярский мир </h2>
-								<p>Реализация интернет магазина канцелярский мир</p>
+								<p>Реализация интернет-магазина канцелярский мир</p>
 								<a href="kancmir.html" class="info">Посмотреть</a>
 							</div>
 						</div>
@@ -271,7 +271,7 @@
 			</section>
 
 
-			<section class="s-call inverse" style="background-image: url(img/call.jpeg);">
+			<section id="contact" class="s-call inverse" style="background-image: url(img/call.jpeg);">
 				<!--заявочка -->
 
 				<div class="container">
@@ -285,24 +285,23 @@
 
 								<!-- Hidden Required Fields -->
 								<input type="hidden" name="project_name" value="Quokka">
-								<input type="hidden" name="admin_email" value="info@quokka.pro">
-								<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+								<input type="hidden" name="admin_email" value="message@quokka.pro">
+								<input type="hidden" name="form_subject" value="Заявка с партфолио">
 								<!-- END Hidden Required Fields -->
 
 								<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 								<div class="formhead h2">Оставить заявку</div>
-								<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+								<p>Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 								<input type="text" name="Имя" placeholder="Ваше имя..." required>
 								<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 								<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
+								<option>Доработка, аудит сайта</option>
 								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
 								<option>Реклама: SMM, SEO</option>
+								<option>Контекстная реклама</option>
+								<option>Комплексное продвижение</option>
 							</select>
 								<button class="button button-white">Отправить</button>
 
@@ -330,7 +329,7 @@
 								<nav class="soc">
 									<ul>
 										<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 										<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 									</ul>
 								</nav>
@@ -344,12 +343,12 @@
 							<nav class="footer-menu">
 
 								<ul>
-									<li class="active"><a href="index.html">Главная</a></li>
+									<li ><a href="index.html">Главная</a></li>
 									<li><a href="yessite.html">Решение для сайтов</a></li>
 									<li><a href="havesite.html">Сайты</a></li>
 									<li><a href="team.html">Команда</a></li>
-									<li><a href="allproject.html">Партфолио</a></li>
-									<li><a href="#">Quokka.news</a></li>
+									<li class="active"><a href="allproject.html">Партфолио</a></li>
+									<!--<li><a href="#">Quokka.news</a></li>-->
 								</ul>
 
 							</nav>
@@ -389,7 +388,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 
