--- a/app/alpsity.html
+++ b/app/alpsity.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Промышленные альпинисты | Quokka</title>
+	<title>Корпоративный сайт промышленных альпинистов | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
 						<h2 class="h2 project-name hidden-xs">
               <a href="allproject.html"> <i class="fa fa-reply arrow-back" aria-hidden="true"></i></a> Промышленные Альпинисты
             </h2>
-						<p class="project-type hidden-xs">Информационный сайт</p>
+						<p class="project-type hidden-xs">Корпоративный сайт</p>
 						<a href="#my-menu" class="hamburger hamburger--emphatic">
 							<span class="hamburger-box"><span class="hamburger-inner"></span></span>
 						</a>
@@ -53,11 +53,11 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li ><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
-								<li><a href="allproject.html">Партфолио</a></li>
+								<li class="active"><a href="allproject.html">Партфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -115,7 +115,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -140,12 +140,11 @@
 					<div class="col-sm-10 col-sm-offset-1 about-project">
 						<p>Из-за поставленных задач было принято решение реализовать данный проект на движке wordpress.</p>
 
-						<p>Для оптимизации верстки были использованы следующие технологии: шаблоны страниц были написаны
-							на html 5 с использованием Sass технологии и сборщик gulp.</p>
+						<p>Чтобы пользователю было удобно отправить заявку и обратиться к исполнителю, было принято решение разместить
+						форму заявки в отдельном popup окне, тем самым форма заявки не маешается на сайте и в любой момент пользователь при нажатии
+					кнопки может ее открыть и оставить свои данные.</p>
 
-						<p>Оплата на сайте происходит с помощью подключения Яндекс.Кассы, которая в свою очередь имеет
-							широкий спект перевода денежных средств (карты, платежные сервисы). Чеки об оплате сразу же
-							отправляются в режиме онлайн в налоговую согласно 54 федеральному закону об онлайн кассах. </p>
+						<p>Портфолио было размещено ввиде новостей, тем самым пользователь может посмотреть последние работы, которые были выполнен промышленными альпенистами.</p>
 
 					</div>
 
@@ -207,24 +206,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка с партфолио альпсити">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo-2.svg" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите копроративный сайт? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Разработка корпоративного сайта</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -255,7 +250,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -267,11 +262,11 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li ><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
-								<li><a href="allproject.html">Партфолио</a></li>
+								<li class="active"><a href="allproject.html">Партфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -307,7 +302,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
