--- a/app/bug.html
+++ b/app/bug.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Доработка сайта | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,12 +49,12 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li ><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -73,10 +73,10 @@
 											<div class="welcome">
 												<p><span>Исправление ошибок, багов</span></p>
 												<h1 class="h1">Доработка сайта</h1>
-												<strong><i class="fa fa-star"></i>Увеличте конверсию с вашего сайта<i class="fa fa-star"></i></strong>
+												<strong><i class="fa fa-star"></i>Увеличьте конверсию с вашего сайта<i class="fa fa-star"></i></strong>
 											</div>
 											<div class="log">
-												Хотите обнновить сайт, исправить имеющиеся ошибки, или просто доделать халатную работа предыдущего специалиста?
+												Хотите обновить сайт, исправить ошибки халатного специалиста или просто доделать работу предыдущего веб-мастера?
 											</div>
 											<a href="#contact" class="button">Заказать</a>
 										</div>
@@ -92,7 +92,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -124,9 +124,11 @@
 	      				<div class="bu1">
 
 	      					<h1>Изменение дизайна</h1>
-	      					<p>В наши дни технологии быстро развиваются, следовательно менется поведение и привычки людей.
-									Пользователи привыкли уже к адаптивному дизайну и удобству на сайте. Если вы хотите, чтобы ваш бизнес
-								был в тренде интернета и ваш сайт был современным и удобным, мы будем рады вам в этом помочь.</p>
+	      					<p>Стремительное развитие технологий меняет поведение и привычки людей. Пользователи избаловались -
+										каждый день интернет предлагает им сотни ярких, выгодных и комфортных предложений.
+										Они готовы задержать внимание на веб-странице только в случае адаптивного дизайна и удобства использования
+										 сайта. Если вы хотите, чтобы ваш бизнес был в тренде, а сайт выглядел современно и удобно, мы с радостью
+										  сделаем это для вас!</p>
 
 
 	      				</div>
@@ -150,10 +152,10 @@
 	      				<div class="bu4">
 
 	      					<h1>Выявление ошибок в back-end</h1>
-	      					<p>Ошибки есть везде, порой они возникают из-за халатности исполнителя, сжатых сроков запуска проекта,
-									невнимательности и т.п. Если же вы с этим сталкнулись, мы рады предоставить вам аудит сайта на ошибки и
-								последующее их исправление, будь это обычная форма отправки или проблема с базой данных, от нас не скроется
-							ни одна ошибка.</p>
+	      					<p>Ошибки - неотъемлемая часть любой работы. Они возникают из-за халатности исполнителя,
+										сжатых сроков запуска проекта, невнимательности и т.п. От нас не скроется ни одна ошибка -
+										будь то обычная форма отправки или проблема с базой данных. Мы проведём аудит вашего сайта и
+										исправим все погрешности.</p>
 
 	      				</div>
 	      			</div>
@@ -218,24 +220,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка на доработку сайта">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите доработать ваш сайт? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Доработка, аудит сайта</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -262,7 +260,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -279,7 +277,7 @@
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -312,7 +310,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
