--- a/app/dodo.html
+++ b/app/dodo.html
@@ -53,11 +53,11 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="#">Решения для сайтов</a></li>
-								<li><a href="#">Сайты</a></li>
-								<li><a href="about.html">Команда</a></li>
-								<li><a href="#">Портфолио</a></li>
+								<li ><a href="index.html">Главная</a></li>
+								<li><a href="yessite.html">Решения для сайтов</a></li>
+								<li><a href="havesite.html">Сайты</a></li>
+								<li><a href="team.html">Команда</a></li>
+								<li class="active"><a href="allproject">Портфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -75,26 +75,26 @@
 										<div class="project">
 
 											<div class="formhead h2">Цели проекта</div>
-											<p>Составление контекстной рекламы Яндекс.Директ</p>
+											<p>Получения клиентов и увелечение продаж с Гугла и Яндекса (Поиск), а также с их партнерских площадках (РСЯ).</p>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/1.png" alt="1"></div>
-												<p>Главная задача интернет-магазина - это удобство. По этому нами было принято решение минимизировать интерфейс, дав пользователю простоту и удобство работы на сайте.</p>
+												<p>Провести анализ по конкурентам в данной сфере услуг. Выбор стратегий для увелечения продаж за летний период.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/2.png" alt="2"></div>
-												<p>Вторпостепенной задачей было скорость работы платформы. Интернет-магазин должен полностью грузится не менее 3 сек.</p>
+												<p>Провести беседу по услугам и продукции нашего клиента, для возможности сбора всех масок. Собрали окло 10 000 ключевых запросов.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/3.png" alt="3"></div>
-												<p>Магазин должен показывать остатки и изменения занесенные в 1с систему, также должны быть синхронизация по фильтрам и свойствам</p>
+												<p>Сделать отбор ключевых фраз, которые не приведут клиентов, чтобы сэкономить бюджет и направить финансы в нужное русло.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/4.png" alt="4"></div>
-												<p>У пользователей как физ.лиц, так и юр.лиц должны быть личные кабинеты, где отображаются разные уровни цен.</p>
+												<p>Провести тестирование рекламной компании, подобрать оптимальны бюджет. Сделать цели в счетчиках, для того чтобы заказчик мог наглядно видеть по каким запросам достигается цель.</p>
 											</div>
 											<a href="#" class="button" target="_blank">Посмотреть полный отчет</a>
 										</div>
@@ -115,7 +115,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -138,16 +138,15 @@
 					</div>
 
 					<div class="col-sm-10 col-sm-offset-1 about-project">
-						<p>Данный проект реализован на фреймворке Django с использованием языка программирования Python,
-							тем самым передача базы 1С происходит частями, создавая минимальную скорость загрузки страниц,
-							 на которых идет загрузка товаров.</p>
+						<p>Получили заявку с нашего сайта (Quokka.pro) на создание рекламной компании на поиске и РСЯ в
+							Google и Yandex. Клиент не понимал как все это работает и куда нужно вкладывать для получение
+							трафика из интернета. Мы провели встречу и объянили как все работает контекстная реклама.</p>
 
-						<p>Для оптимизации верстки были использованы следующие технологии: шаблоны страниц были написаны
-							на html 5 с использованием Sass технологии и сборщик gulp.</p>
+						<p>Мы получили всю необходимую информацию и тесно работали с заказчиком.
+							 Благодаря сотрудничеству получилась хорошая и прибыльная рекламная компания, в следствии
+							 чего, заказчик остался очень доволен увелечению прибыли и постоянных клиентов.</p>
 
-						<p>Оплата на сайте происходит с помощью подключения Яндекс.Кассы, которая в свою очередь имеет
-							широкий спект перевода денежных средств (карты, платежные сервисы). Чеки об оплате сразу же
-							отправляются в режиме онлайн в налоговую согласно 54 федеральному закону об онлайн кассах. </p>
+
 
 					</div>
 
@@ -210,18 +209,14 @@
 
 							<div class="callback-logo"><img src="img/logo-2.svg" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите прибыльную рекламную кампанию? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Разработка контекстной рекламы</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -252,7 +247,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -264,11 +259,11 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li ><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
-								<li><a href="allproject.html">Партфолио</a></li>
+								<li class="active"><a href="allproject.html">Партфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -304,7 +299,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
