--- a/app/smm.html
+++ b/app/smm.html
@@ -49,12 +49,12 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -94,7 +94,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -126,9 +126,10 @@
 	      				<div class="smm1">
 
 	      					<h1>Только заинтересованные люди</h1>
-	      					<p>Социальными сетями пользуются очень много потенциальных покупателей, но как найти среди них тех,
-									которые готовы приобрести именно вашу продукцию или услугу? Мы с легкостью отберем
-								 людей, которы будут заинтересованы именно вами.</p>
+	      					<p>Социальные сети - бескрайние просторы, в которых блуждают миллионы потенциальных покупателей.
+										Как сделать так, чтобы на удочку клюнули именно те, кто готов приобрести именно вашу продукцию
+										или услугу прямо сейчас? Мы с лёгкостью отберём пользователей, которые заинтересуются вами и станут
+										вашими постоянными клиентами.</p>
 
 
 	      				</div>
@@ -152,8 +153,9 @@
 	      				<div class="smm4">
 
 	      					<h1>Размещение уникального контента</h1>
-	      					<p>Чтобы привлечь максимальное количество пользователей социальных сетей и спровоцировать их
-									на покупку, мы создаем контент, который 100% будет интересен и завлечет покупателя именно к вам.</p>
+	      					<p>За счёт чего можно привлечь максимальное количество пользователей соцсетей? С помощью грамотного
+										 и уникального контента, который мы создадим. Правильный подход к наполнению любого интернет-ресурса
+										 позволит не просто заманить покупателя, но и сделать его вашим клиентом.</p>
 
 	      				</div>
 	      			</div>
@@ -161,9 +163,9 @@
 	      				<div class="smm5">
 
 	      					<h1>Отчетность</h1>
-	      					<p>Чтобы наблюдать как ваш брэнд набирает популярность и следить за конверсиями покупателей из социальных сетей,
-									мы присылаем вам подготовленные нами отчеты, где вы сможете увидеть необходимую статистику развития вашей компании
-								в социальных сетях.</p>
+	      					<p>Мы дадим вам возможность наблюдать за развитием вашей компании в соцсетях. В отчётах, которые мы регулярно
+										 присылаем, - вся необходимая статистика. Вы будете видеть собственными глазами, как ваш брэнд набирает
+										 популярность. А лучшим свидетельством увеличения конверсий станет рост дохода от продаж.</p>
 
 
 	      				</div>
@@ -218,24 +220,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка на SMM продвижение">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите больше внимания? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>SMM продвижение</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -262,7 +260,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -274,12 +272,12 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -312,7 +310,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
