--- a/app/tehnopark.html
+++ b/app/tehnopark.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Технопарк | Quokka</title>
+	<title>Корпоративный сайт Технопарк | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,11 +53,11 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="#">Решения для сайтов</a></li>
-								<li><a href="#">Сайты</a></li>
-								<li><a href="about.html">Команда</a></li>
-								<li><a href="#">Портфолио</a></li>
+								<li><a href="index.html">Главная</a></li>
+								<li><a href="yessite.html">Решения для сайтов</a></li>
+								<li><a href="havesite.html">Сайты</a></li>
+								<li><a href="team.html">Команда</a></li>
+								<li class="active"><a href="allproject.html">Портфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -79,22 +79,25 @@
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/1.png" alt="1"></div>
-												<p>Главная задача интернет-магазина - это удобство. По этому нами было принято решение минимизировать интерфейс, дав пользователю простоту и удобство работы на сайте.</p>
+												<p>Главная задача сайта - это удобство. По этому нами было принято решение добавить дополнительно левое меню
+													для удобство поиска услуг по ремонту, а также размещение на слайдере актуальных услуг и переход по ним.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/2.png" alt="2"></div>
-												<p>Вторпостепенной задачей было скорость работы платформы. Интернет-магазин должен полностью грузится не менее 3 сек.</p>
+												<p>Следующая задача стояла в добавлении новых страниц на сайт, а также цен и описания, данное содержание
+												должно быть оптимизировано под поисковые системы.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/3.png" alt="3"></div>
-												<p>Магазин должен показывать остатки и изменения занесенные в 1с систему, также должны быть синхронизация по фильтрам и свойствам</p>
+												<p>Дополнительной задачей стояло размещение галлерей и переработка шапки сайта. Добавление актуальных номеров телефонов, а также переход
+												на контакты и оставление заявок непосредственно на сайте.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/4.png" alt="4"></div>
-												<p>У пользователей как физ.лиц, так и юр.лиц должны быть личные кабинеты, где отображаются разные уровни цен.</p>
+												<p>Изменение контактов и добавление марок по ремонту и обслуживанию различных инструментов.</p>
 											</div>
 											<a href="http://tehnopark.info/" class="button" target="_blank">Посетить сайт</a>
 										</div>
@@ -115,7 +118,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -138,16 +141,13 @@
 					</div>
 
 					<div class="col-sm-10 col-sm-offset-1 about-project">
-						<p>Данный проект реализован на фреймворке Django с использованием языка программирования Python,
-							тем самым передача базы 1С происходит частями, создавая минимальную скорость загрузки страниц,
-							 на которых идет загрузка товаров.</p>
+						<p>Данный проект был реализован предыдущей веб студей на движке 1с Битрикс на тарифе "Старт".</p>
 
-						<p>Для оптимизации верстки были использованы следующие технологии: шаблоны страниц были написаны
-							на html 5 с использованием Sass технологии и сборщик gulp.</p>
+						<p>Для удобства отображения контактов, мы отредактировали шапку сайта, привязав ее к прокрутке страницы, Такое расположение
+						поможет пользователю сразу перейти на страницу контактов и с мобильных устройств сразу набрать номер интересующего
+					магазина или сервиса.</p>
 
-						<p>Оплата на сайте происходит с помощью подключения Яндекс.Кассы, которая в свою очередь имеет
-							широкий спект перевода денежных средств (карты, платежные сервисы). Чеки об оплате сразу же
-							отправляются в режиме онлайн в налоговую согласно 54 федеральному закону об онлайн кассах. </p>
+						<p>Данный сайт постоянно обновляется и в данный момент там размещена актуальная информация и цены об услугах и товарах.</p>
 
 					</div>
 
@@ -209,24 +209,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка с партфолио Технопарк">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo-2.svg" alt="Quokka - студия веб разработки"></div>
-							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<div class="formhead h2">Оставить заявку?</div>
+							<p>Хотите отредактировать или изменить ваш сайт? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Редактирование, изменение сайта</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -257,7 +253,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -269,11 +265,11 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
-								<li><a href="allproject.html">Партфолио</a></li>
+								<li class="active"><a href="allproject.html">Партфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -309,7 +305,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
