--- a/app/havesite.html
+++ b/app/havesite.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Разработка сайтов | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,12 +50,12 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li ><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
-								<li><a href="havesite.html">Сайты</a></li>
+								<li class="active"><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -95,7 +95,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -169,12 +169,11 @@
 			<div class="row">
 
 				<div class="col-sm-12">
-					<h2 class="h2 text-center h-first">Хотите ознакомится с решениями?</h2>
+					<h2 class="h2 text-center h-first">Хотите Ознакомиться с решениями?</h2>
 				</div>
 
 				<div class="col-sm-8 col-sm-offset-2 text-center">
-					<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
-						что мы вашу проблему уже решали. </p>
+					<p>Вы можете посмотреть примеры наших работ - возможно, вашу проблему мы уже решали. </p>
 						<a href="allproject.html" class="button">Посмотреть</a>
 
 				</div>
@@ -198,24 +197,23 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка на разработку сайта">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите качественный сайт? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Landing-page</option>
+								<option>Корпоративный сайт</option>
+								<option>Интернет-магазин</option>
+								<option>Порталы, веб-приложения</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -242,7 +240,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -254,12 +252,12 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
+								<li ><a href="index.html">Главная</a></li>
 								<li><a href="yessite.html">Решение для сайтов</a></li>
-								<li><a href="havesite.html">Сайты</a></li>
+								<li class="active"><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -292,7 +290,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
