--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Quokka</title>
+	<title>Cтудия веб разработки | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -85,13 +85,13 @@
 											<div class="welcome">
 												<p><span>Добро пожаловать в веб студию</span></p>
 												<h1 class="h1">Quokka</h1>
-												<strong><i class="fa fa-star"></i>Любые разработки под ваши нужды<i class="fa fa-star"></i></strong>
+												<strong><i class="fa fa-star"></i>Автоматизация, аналитика, реклама в интернете<i class="fa fa-star"></i></strong>
 											</div>
 
-											<p>Организуем любые сложные задуманные проекты и автоматизируем ваши рабочие процессы</p>
+											<p>Реализуем любые сложные проекты и автоматизируем ваши рабочие процессы</p>
 
 											<a href="allproject.html" class="button">Посмотреть наши работы</a>
-											<a href="#op" class="button">Найти подходящее решение</a>
+											<a href="#contact" class="button">Оставить заявку</a>
 
 
 									</div>
@@ -107,7 +107,7 @@
 					<nav class="soc">
 						<ul>
 							<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 						</ul>
 					</nav>
@@ -248,11 +248,52 @@
 			</div>
 		</section>
 
-	</div>
 
 
+	<section id="contact" class="s-call inverse" style="background-image: url(img/call.jpeg);"> <!--заявочка -->
+
+				<div class="container">
+					<div class="row">
+
+						<div class="col-md-5 col-md-offset-7 col-sm-6 col-sm-offset-6">
+
+							<form class="callback">
+
+								<div class="success"><span>Спасибо за заявку!</span></div>
+
+								<!-- Hidden Required Fields -->
+								<input type="hidden" name="project_name" value="Quokka">
+								<input type="hidden" name="admin_email" value="info@quokka.pro">
+								<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+								<!-- END Hidden Required Fields -->
+
+								<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
+								<div class="formhead h2">Оставить заявку</div>
+								<p>Оставьте заявку и мы перезвоним вам в течение 15 минут.</p>
+
+								<input type="text" name="Имя" placeholder="Ваше имя..." required>
+								<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
+								<select name="Услуга">
+									<option value disabled selected>Выбрать услугу...</option>
+									<option>Доработка, аудит сайта</option>
+									<option>Разработка сайта</option>
+									<option>Реклама: SMM, SEO</option>
+									<option>Контекстная реклама</option>
+									<option>Комплексное продвижение</option>
+								</select>
+								<button class="button button-white">Отправить</button>
+
+							</form>
+
+						</div>
+
+					</div>
+				</div>
+
+	      	</section>
 
 
+</div>
 
 	<div id="my-footer">
 
@@ -269,7 +310,7 @@
 								<nav class="soc">
 									<ul>
 										<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 										<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 									</ul>
 								</nav>
@@ -283,12 +324,12 @@
 							<nav class="footer-menu">
 
 								<ul>
-									<li class="active"><a href="#">Главная</a></li>
-									<li><a href="#">Решение для сайтов</a></li>
-									<li><a href="#">Сайты</a></li>
-									<li><a href="#">Команда</a></li>
-									<li><a href="#">Партфолио</a></li>
-									<li><a href="#">Quokka.news</a></li>
+									<li class="active"><a href="index.html">Главная</a></li>
+									<li><a href="yessite.html">Решение для сайтов</a></li>
+									<li><a href="havesite.html">Сайты</a></li>
+									<li><a href="team.html">Команда</a></li>
+									<li><a href="allproject.html">Партфолио</a></li>
+									<!--<li><a href="#">Quokka.news</a></li>-->
 								</ul>
 
 							</nav>
@@ -328,7 +369,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 
