--- a/app/kontekst.html
+++ b/app/kontekst.html
@@ -49,12 +49,12 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li ><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -76,7 +76,7 @@
 												<strong><i class="fa fa-star"></i>Быстрое получение клиентов<i class="fa fa-star"></i></strong>
 											</div>
 											<div class="log">
-												Хотите полуать клиентов уже сейчас? Контекстная реклама вам обязательно в этом поможет.
+												Хотите каждый день привлекать новых клиентов? Контекстная реклама вам обязательно в этом поможет.
 
 
 											</div>
@@ -94,7 +94,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -126,10 +126,11 @@
 	      				<div class="kt1">
 
 	      					<h1>Полный анализ вашей аудитории</h1>
-	      					<p>Перед тем как запустить рекламную кампанию мы тщательно изучаем вашу целевую аудиторию.
-									Без этого этапа работы нету смысла начинать рекламную кампанию, потому что ваши деньги
-								точно уйдут не туда. Иногда кроме ЦА стоит изучить как спрос продукции, конкурентов, а также сезонность,
-							и конечно же, мы это тоже делаем за вас и стараемся направить ваш рекламный бюджет в правильное русло. </p>
+	      					<p>Перед тем как запустить рекламную кампанию, мы тщательно изучаем вашу целевую аудиторию.
+									Без этого этапа работы нет смысла начинать рекламную кампанию, потому что ваши деньги
+								точно уйдут не туда. Иногда, кроме ЦА, стоит изучить и спрос продукции конкурентов, сезонность продаж.
+								 В результате мы не просто привлечём новых клиентов в вашу компанию, но и направим ваш рекламный бюджет в
+								 правильное русло. </p>
 
 
 	      				</div>
@@ -162,10 +163,10 @@
 	      		<div class="col-sm-8">
 	      				<div class="kt5">
 
-	      					<h1>Бесплатный аудит, и личный маркетолог</h1>
-	      					<p>Приобретая рекламную кампанию у нас, вы получаете в пользование персонального маркетолога, который
-									готов будет вам подсказывать, сможет провести вам разовый аудит другого сайта, ответит на все ваши интересующие вопросы.
-								пользоваться данной услугой можно в любое время в течении одного месяца.</p>
+	      					<h1>Бесплатный аудит. Личный маркетолог</h1>
+	      					<p>Закажи рекламную кампанию у нас и получи персонального маркетолога, который ответит вам на
+										все интересующие вопросы, подскажет и проведёт разовый аудит другого сайта. Воспользоваться данной
+										услугой можно в любое время в течение одного месяца.</p>
 
 
 	      				</div>
@@ -220,24 +221,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка на контекстную рекламу">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите прибыльную рекламную кампанию? Оставьте заявку и мы перезвоним вам в течение 15 минут и обсудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>Контекстная реклама</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -264,7 +261,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -276,12 +273,12 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li ><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -314,7 +311,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
