--- a/app/seo.html
+++ b/app/seo.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Seo продвижение | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,12 +49,12 @@
 						<nav id="my-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -73,10 +73,10 @@
 											<div class="welcome">
 												<p><span>Оптимизация сайта</span></p>
 												<h1 class="h1">SEO продвижение</h1>
-												<strong><i class="fa fa-star"></i>Увеличте посещаемость вашего сайта<i class="fa fa-star"></i></strong>
+												<strong><i class="fa fa-star"></i>Увеличьте посещаемость вашего сайта<i class="fa fa-star"></i></strong>
 											</div>
 											<div class="log">
-												Чтобы ваши товары и услуги постоянно заказывали, вам необходимо оптимизировать ваш сайт под поисковую систему, тем самым увеличить количество посещений на ваш сайт.
+												Чтобы ваши товары и услуги постоянно заказывали, сайт необходимо оптимизировать под поисковую систему. Это поможет значительно увеличить количество посещений вашего интернет-ресурса.
 											</div>
 											<a href="#contact" class="button">Заказать</a>
 										</div>
@@ -92,7 +92,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -124,10 +124,10 @@
 	      				<div class="seo1">
 
 	      					<h1>Уникальные тексты</h1>
-	      					<p>Для качественных запросов, необходим уникальный и оптимизированный SEO текст. Наши специалисты
-									готовы вникнуть в вашу тематику и изучить специфику вашего бизнеса, тем самым текст, который будет
-								размещен у вас на сайте будет не только привлекать внимание читающих его, а также будет соответсвовать
-							всем стандартам поисковых систем.</p>
+	      					<p>Для качественных запросов, необходим уникальный и оптимизированный SEO текст.
+										 Наши специалисты готовы вникнуть в любую тематику и изучить специфику вашего бизнеса.
+										  В результате полученный текст, который разместится на страничках вашего сайта, не просто
+											 привлечёт внимание читающих, но и будет соответствовать всем стандартам поисковых систем.</p>
 
 
 	      				</div>
@@ -151,8 +151,9 @@
 	      				<div class="seo4">
 
 	      					<h1>Внутренние настройки сайта</h1>
-	      					<p>Чтобы поисковые пауки не блуждали в поисках необходимой им информации, мы делаем техническую часть т.е
-									настраиваем файлы (robots.txt, htaccess, sitemap) и делаем полностью понятную структуру сайта.</p>
+	      					<p>Чтобы поисковые пауки не блуждали, разыскивая необходимую информацию, мы отрабатываем
+										техническую часть. Наши специалисты настраивают файлы (robots.txt, htaccess, sitemap) и
+										создают понятную всем структуру сайта.</p>
 
 	      				</div>
 	      			</div>
@@ -160,8 +161,8 @@
 	      				<div class="seo5">
 
 	      					<h1>Отчетность</h1>
-	      					<p>Для того, чтобы видели развитиве и рост количества показов и переходов в поисковой системе, мы подготавливаем
-									вам отчеты.</p>
+	      					<p>Хотите убедиться в росте количества показов и переходов в поисковой системе?
+										Наши отчёты наглядно продемонстрируют развитие вашего сайта.</p>
 
 
 	      				</div>
@@ -216,24 +217,20 @@
 
 							<!-- Hidden Required Fields -->
 							<input type="hidden" name="project_name" value="Quokka">
-							<input type="hidden" name="admin_email" value="info@quokka.pro">
-							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
+							<input type="hidden" name="admin_email" value="message@quokka.pro">
+							<input type="hidden" name="form_subject" value="Заявка на Seo продвижние">
 							<!-- END Hidden Required Fields -->
 
 							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
-							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+							<p>Хотите постоянные заказы с сайта? Оставьте заявку и мы перезвоним вам в течение 15 минут и обудим детали.</p>
 
 							<input type="text" name="Имя" placeholder="Ваше имя..." required>
 							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
-								<option>Аудит сайта</option>
-								<option>Разработка логотипа</option>
-								<option>Разработка дизайна</option>
-								<option>Разработка сайта</option>
-								<option>Редизайн сайта</option>
-								<option>Реклама: SMM, SEO</option>
+								<option>SEO продвижение</option>
+
 							</select>
 							<button class="button button-white">Отправить</button>
 
@@ -260,7 +257,7 @@
 						<nav class="soc">
 							<ul>
 								<li><a href="https://www.facebook.com/groups/1925551491022845"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="http://instagram.com/quokka.pro"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="https://vk.com/qu0kka"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</nav>
@@ -272,12 +269,12 @@
 						<nav class="footer-menu">
 
 							<ul>
-								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="index.html">Главная</a></li>
+								<li class="active"><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
-								<li><a href="#">Quokka.news</a></li>
+								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
 						</nav>
@@ -310,7 +307,7 @@
 	<script src="libs/particlesjs/particles.js"></script>
 	<script src="libs/particlesjs/app.js"></script>
 	<script src="js/scripts.min.js"></script>
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter37630640 = new Ya.Metrika({ id:37630640, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37630640" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
